Additional code cleanup

--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -12,7 +12,9 @@
                 <p-header>
                     Actions
                 </p-header>
-                <a (click)="createNewTask('Contact Center', 'acct-maintenance')">Account Maintenance</a>
+                <a class="pointer" (click)="createNewTask('Contact Center', 'acct-maintenance')">
+                    Account Maintenance
+                </a>
                 <a routerLink="./">Acct Review Maintenance</a>
                 <a routerLink="./">Asset Transaction</a>
                 <a routerLink="../contact-center" [state]="{data: contactCenterDetails}">
