--- a/src/app/tasks/task-container/task-container.component.html
+++ b/src/app/tasks/task-container/task-container.component.html
@@ -1,6 +1,6 @@
 <div class="container-div">
     <div>
-        <span class="task-label">{{taskRequestData?.actionName}}</span>
+        <span class="task-label">{{taskInitData?.actionName}}</span>
         <span class="fa fa-info-circle info-icon"></span>
     </div>
     <div class="task-sum-pad">
