--- a/src/app/create-task/account/account-summary/account-summary.component.html
+++ b/src/app/create-task/account/account-summary/account-summary.component.html
@@ -12,12 +12,12 @@
                 <p-header>
                     Actions
                 </p-header>
-                <a class="pointer" (click)="createNewTask('Contact Center', 'acct-maintenance')">
+                <a routerLink="./">
                     Account Maintenance
                 </a>
                 <a routerLink="./">Acct Review Maintenance</a>
                 <a routerLink="./">Asset Transaction</a>
-                <a routerLink="../contact-center" [state]="{data: contactCenterDetails}">
+                <a class="pointer" (click)="createNewTask('Contact Center', 'contact-center')">
                     Contact Center
                 </a>
                 <a routerLink="./">DARS Approval</a>
