communication component added

--- a/src/app/tasks/task-container/task-container.component.html
+++ b/src/app/tasks/task-container/task-container.component.html
@@ -26,7 +26,7 @@
                     <h3>Audit placeholder</h3>
                 </p-tabPanel>
                 <p-tabPanel header="Communication" *ngIf="taskComponent && taskComponent.showCommunication()">
-                    <h3>Communication placeholder</h3>
+                    <srca-communication></srca-communication>
                 </p-tabPanel>
                 <p-tabPanel header="Workflow" *ngIf="taskComponent && taskComponent.showWorkflow()">
                     <h3>Workflow placeholder</h3>
