Error msg added added and removed toaster for contact center and login screen

--- a/src/app/tasks/components/contact-center-task/contact-center-task.component.html
+++ b/src/app/tasks/components/contact-center-task/contact-center-task.component.html
@@ -226,7 +226,7 @@
         </div>
 
         <div *ngIf="isSaveBtnClicked && message">
-            <div [ngClass]="message.cssClass" *ngIf="!taskDetailForm.valid || !taskDetailForm.touched">
+            <div [ngClass]="message.cssClass">
                 {{message.text}}
             </div>
         </div>
