--- a/src/app/tasks/components/audit/audit.component.scss
+++ b/src/app/tasks/components/audit/audit.component.scss
@@ -7,3 +7,10 @@
     margin-right:20px;
     margin-left:20px;
 }
+.p-multiselect-filter-option{
+ width:200px;
+ margin-right: 50px;
+}
+.filter-labels{
+    margin-right: 50px;
+}
