--- a/src/app/tasks/components/contact-center-task/contact-center-task.component.html
+++ b/src/app/tasks/components/contact-center-task/contact-center-task.component.html
@@ -131,11 +131,13 @@
             formGroupName="additionalAccounts">
             <div class="col-md-4">
                 <label class="task-detail-label">Account Number</label>
-                <input formControlName="accountNumber" type="text" pInputText />
+                <input formControlName="accountNumber" type="text" pInputText
+                    [ngClass]="{ 'invalid-input': accountNumber.errors && accountNumber.touched }" />
             </div>
             <div class="col-md-4">
                 <label class="task-detail-label">Account Short Name</label>
-                <input formControlName="accountShortName" type="text" pInputText />
+                <input formControlName="accountShortName" type="text" pInputText
+                    [ngClass]="{ 'invalid-input': accountShortName.errors && accountShortName.touched }" />
             </div>
             <div class="col-md-2">
                 <p-button type="button" label="Add" (click)="updateAccountsList()"></p-button>
